Bug 476683 - Comics manager docker's visibility isn't affected by the Show Dockers toggle.
Summary: Comics manager docker's visibility isn't affected by the Show Dockers toggle.
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Dockers (other bugs)
Version First Reported In: 5.2.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: regression
: 491757 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-11-07 16:51 UTC by BroskiBaboski
Modified: 2024-08-22 20:49 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description BroskiBaboski 2023-11-07 16:51:15 UTC
SUMMARY
***
Title; Comic manager docker won't despawn despite pressing the Show Dockers shortcut
***


STEPS TO REPRODUCE
1. Have comics manager docker floating
2. press "Show Dockers" shortcut

OBSERVED RESULT
Other dockers disappear, but Comics Manager does not

EXPECTED RESULT
They should all despawn

SOFTWARE/OS VERSIONS
Linux: EndeavourOS / i3wm
KDE Frameworks Version: 5.111.0
Qt Version: 5.15.11

ADDITIONAL INFORMATION
Does not happen in 5.2.0 and earlier
Comment 1 Halla Rempt 2023-11-08 09:44:48 UTC
That goes for all dockers that have the special attribute "show on welcome screen". Working around this is rather complicated, so we kinda decided to just keep it this way. The only other docker right now with that attribute is the log docker.
Comment 2 BroskiBaboski 2023-11-09 04:10:27 UTC
Well, this is a problem for me because I am dependant on that. I use my dockers on floating and spawn/despawn them at necessity through the shortcut, plus I work on comics so I require that docker.
I'm currently using 5.1.5 and the issue doesn't exist there
Comment 3 Halla Rempt 2023-11-09 09:14:07 UTC
Yes, I know. 5.1.5 didn't have the new docker-hiding welcome screen. But fixing this regression is not the highest priority.
Comment 4 Bug Janitor Service 2023-12-02 18:04:21 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/2012
Comment 5 Freya Lupen 2023-12-07 17:04:52 UTC
Git commit 35649e6d9c2ee95cfc62c629b0f7c4d7b9df68cb by Freya Lupen.
Committed on 07/12/2023 at 18:01.
Pushed by freyalupen into branch 'master'.

Fix docker ShowOnWelcomePage flag

Ignore it if we aren't on the welcome page,
so we can still hide those dockers normally.

M  +3    -3    libs/ui/KisMainWindow.cpp
M  +1    -1    libs/ui/KisMainWindow.h

https://invent.kde.org/graphics/krita/-/commit/35649e6d9c2ee95cfc62c629b0f7c4d7b9df68cb
Comment 6 Freya Lupen 2023-12-07 17:05:58 UTC
Git commit 984b8c5e6545765c8f7f9c139419207781a38e3b by Freya Lupen.
Committed on 07/12/2023 at 18:05.
Pushed by freyalupen into branch 'krita/5.2'.

Fix docker ShowOnWelcomePage flag

Ignore it if we aren't on the welcome page,
so we can still hide those dockers normally.


(cherry picked from commit 35649e6d9c2ee95cfc62c629b0f7c4d7b9df68cb)

M  +3    -3    libs/ui/KisMainWindow.cpp
M  +1    -1    libs/ui/KisMainWindow.h

https://invent.kde.org/graphics/krita/-/commit/984b8c5e6545765c8f7f9c139419207781a38e3b
Comment 7 Dean 2024-08-15 17:35:13 UTC
Don't know why this bug is marked as "RESOLVED FIXED" when I'm still having this exact same issue in 5.2.2
Comment 8 Freya Lupen 2024-08-22 20:25:58 UTC
The fix isn't in 5.2.2, but in 5.2.3 (the current latest version). Try updating.
Comment 9 Freya Lupen 2024-08-22 20:26:05 UTC
*** Bug 491757 has been marked as a duplicate of this bug. ***
Comment 10 Dean 2024-08-22 20:49:48 UTC
(In reply to Freya Lupen from comment #9)
> *** Bug 491757 has been marked as a duplicate of this bug. ***

Thanks. Sorry for the trouble.