Fix docker ShowOnWelcomePage flag

Ignore it if we aren't on the welcome page,
so we can still hide those dockers normally.

BUG:476683


(cherry picked from commit 35649e6d9c2ee95cfc62c629b0f7c4d7b9df68cb)